// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Live API Runtime Validation (Snapshots) > validates Album by UPC data structure 1`] = `
{
  "artist": {
    "id": "number",
    "name": "string",
    "picture": "string",
    "picture_big": "string",
    "picture_medium": "string",
    "picture_small": "string",
    "picture_xl": "string",
    "tracklist": "string",
    "type": "string",
  },
  "available": "boolean",
  "contributors": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "role": "string",
      "share": "string",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "cover": "string",
  "cover_big": "string",
  "cover_medium": "string",
  "cover_small": "string",
  "cover_xl": "string",
  "duration": "number",
  "explicit_content_cover": "number",
  "explicit_content_lyrics": "number",
  "explicit_lyrics": "boolean",
  "fans": "number",
  "genre_id": "number",
  "genres": {
    "data": [
      {
        "id": "number",
        "name": "string",
        "picture": "string",
        "type": "string",
      },
    ],
  },
  "id": "number",
  "label": "string",
  "link": "string",
  "md5_image": "string",
  "nb_tracks": "number",
  "record_type": "string",
  "release_date": "string",
  "share": "string",
  "title": "string",
  "tracklist": "string",
  "tracks": {
    "data": [
      {
        "album": {
          "cover": "string",
          "cover_big": "string",
          "cover_medium": "string",
          "cover_small": "string",
          "cover_xl": "string",
          "id": "number",
          "md5_image": "string",
          "title": "string",
          "tracklist": "string",
          "type": "string",
        },
        "artist": {
          "id": "number",
          "name": "string",
          "tracklist": "string",
          "type": "string",
        },
        "duration": "number",
        "explicit_content_cover": "number",
        "explicit_content_lyrics": "number",
        "explicit_lyrics": "boolean",
        "id": "number",
        "link": "string",
        "md5_image": "string",
        "preview": "string",
        "rank": "number",
        "readable": "boolean",
        "title": "string",
        "title_short": "string",
        "title_version": "string",
        "type": "string",
      },
    ],
  },
  "type": "string",
  "upc": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Album endpoint data structure 1`] = `
{
  "artist": {
    "id": "number",
    "name": "string",
    "picture": "string",
    "picture_big": "string",
    "picture_medium": "string",
    "picture_small": "string",
    "picture_xl": "string",
    "tracklist": "string",
    "type": "string",
  },
  "available": "boolean",
  "contributors": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "role": "string",
      "share": "string",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "cover": "string",
  "cover_big": "string",
  "cover_medium": "string",
  "cover_small": "string",
  "cover_xl": "string",
  "duration": "number",
  "explicit_content_cover": "number",
  "explicit_content_lyrics": "number",
  "explicit_lyrics": "boolean",
  "fans": "number",
  "genre_id": "number",
  "genres": {
    "data": [
      {
        "id": "number",
        "name": "string",
        "picture": "string",
        "type": "string",
      },
    ],
  },
  "id": "number",
  "label": "string",
  "link": "string",
  "md5_image": "string",
  "nb_tracks": "number",
  "record_type": "string",
  "release_date": "string",
  "share": "string",
  "title": "string",
  "tracklist": "string",
  "tracks": {
    "data": [
      {
        "album": {
          "cover": "string",
          "cover_big": "string",
          "cover_medium": "string",
          "cover_small": "string",
          "cover_xl": "string",
          "id": "number",
          "md5_image": "string",
          "title": "string",
          "tracklist": "string",
          "type": "string",
        },
        "artist": {
          "id": "number",
          "name": "string",
          "tracklist": "string",
          "type": "string",
        },
        "duration": "number",
        "explicit_content_cover": "number",
        "explicit_content_lyrics": "number",
        "explicit_lyrics": "boolean",
        "id": "number",
        "link": "string",
        "md5_image": "string",
        "preview": "string",
        "rank": "number",
        "readable": "boolean",
        "title": "string",
        "title_short": "string",
        "title_version": "string",
        "type": "string",
      },
    ],
  },
  "type": "string",
  "upc": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Artist endpoint data structure 1`] = `
{
  "id": "number",
  "link": "string",
  "name": "string",
  "nb_album": "number",
  "nb_fan": "number",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_xl": "string",
  "radio": "boolean",
  "share": "string",
  "tracklist": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Editorial endpoint data structure 1`] = `
{
  "id": "number",
  "name": "string",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_xl": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Genre endpoint data structure 1`] = `
{
  "id": "number",
  "name": "string",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_xl": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Infos endpoint data structure 1`] = `
{
  "ads": {
    "audio": {
      "default": {
        "interval": "number",
        "start": "number",
        "unit": "string",
      },
    },
    "big_native_ads_home": {
      "android": {
        "enabled": "boolean",
      },
      "android_tablet": {
        "enabled": "boolean",
      },
      "ipad": {
        "enabled": "boolean",
      },
      "iphone": {
        "enabled": "boolean",
      },
    },
    "display": {
      "interstitial": {
        "interval": "number",
        "start": "number",
        "unit": "string",
      },
    },
  },
  "country": "string",
  "country_iso": "string",
  "has_podcasts": "boolean",
  "hosts": {
    "images": "string",
    "stream": "string",
  },
  "offers": [],
  "open": "boolean",
  "pop": "string",
  "upload_token": "string",
  "upload_token_lifetime": "number",
  "user_token": "null",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Options endpoint data structure 1`] = `
{
  "ads_audio": "boolean",
  "ads_display": "boolean",
  "can_subscribe": "boolean",
  "hq": "boolean",
  "lossless": "boolean",
  "offline": "boolean",
  "preview": "boolean",
  "radio": "boolean",
  "radio_skips": "number",
  "streaming": "boolean",
  "streaming_duration": "number",
  "too_many_devices": "boolean",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Playlist endpoint data structure 1`] = `
{
  "add_date": "string",
  "checksum": "string",
  "collaborative": "boolean",
  "creation_date": "string",
  "creator": {
    "id": "number",
    "name": "string",
    "tracklist": "string",
    "type": "string",
  },
  "description": "string",
  "duration": "number",
  "fans": "number",
  "id": "number",
  "is_loved_track": "boolean",
  "link": "string",
  "md5_image": "string",
  "mod_date": "string",
  "nb_tracks": "number",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_type": "string",
  "picture_xl": "string",
  "public": "boolean",
  "share": "string",
  "title": "string",
  "tracklist": "string",
  "tracks": {
    "checksum": "string",
    "data": [
      {
        "album": {
          "cover": "string",
          "cover_big": "string",
          "cover_medium": "string",
          "cover_small": "string",
          "cover_xl": "string",
          "id": "number",
          "md5_image": "string",
          "title": "string",
          "tracklist": "string",
          "type": "string",
          "upc": "string",
        },
        "artist": {
          "id": "number",
          "link": "string",
          "name": "string",
          "tracklist": "string",
          "type": "string",
        },
        "duration": "number",
        "explicit_content_cover": "number",
        "explicit_content_lyrics": "number",
        "explicit_lyrics": "boolean",
        "id": "number",
        "isrc": "string",
        "link": "string",
        "md5_image": "string",
        "preview": "string",
        "rank": "number",
        "readable": "boolean",
        "time_add": "number",
        "title": "string",
        "title_short": "string",
        "title_version": "string",
        "type": "string",
      },
    ],
  },
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Radio endpoint data structure 1`] = `
{
  "description": "string",
  "id": "number",
  "md5_image": "string",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_xl": "string",
  "share": "string",
  "title": "string",
  "tracklist": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Search endpoint data structure 1`] = `
{
  "data": [
    {
      "album": {
        "cover": "string",
        "cover_big": "string",
        "cover_medium": "string",
        "cover_small": "string",
        "cover_xl": "string",
        "id": "number",
        "md5_image": "string",
        "title": "string",
        "tracklist": "string",
        "type": "string",
      },
      "artist": {
        "id": "number",
        "link": "string",
        "name": "string",
        "picture": "string",
        "picture_big": "string",
        "picture_medium": "string",
        "picture_small": "string",
        "picture_xl": "string",
        "tracklist": "string",
        "type": "string",
      },
      "duration": "number",
      "explicit_content_cover": "number",
      "explicit_content_lyrics": "number",
      "explicit_lyrics": "boolean",
      "id": "number",
      "isrc": "string",
      "link": "string",
      "md5_image": "string",
      "preview": "string",
      "rank": "number",
      "readable": "boolean",
      "title": "string",
      "title_short": "string",
      "title_version": "string",
      "type": "string",
    },
  ],
  "next": "function",
  "total": "number",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Search with Builder support 1`] = `
{
  "data": [
    {
      "album": {
        "cover": "string",
        "cover_big": "string",
        "cover_medium": "string",
        "cover_small": "string",
        "cover_xl": "string",
        "id": "number",
        "md5_image": "string",
        "title": "string",
        "tracklist": "string",
        "type": "string",
      },
      "artist": {
        "id": "number",
        "link": "string",
        "name": "string",
        "picture": "string",
        "picture_big": "string",
        "picture_medium": "string",
        "picture_small": "string",
        "picture_xl": "string",
        "tracklist": "string",
        "type": "string",
      },
      "duration": "number",
      "explicit_content_cover": "number",
      "explicit_content_lyrics": "number",
      "explicit_lyrics": "boolean",
      "id": "number",
      "isrc": "string",
      "link": "string",
      "md5_image": "string",
      "preview": "string",
      "rank": "number",
      "readable": "boolean",
      "title": "string",
      "title_short": "string",
      "title_version": "string",
      "type": "string",
    },
  ],
  "next": "function",
  "total": "number",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Specialized Search with Builder support 1`] = `
{
  "data": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "nb_album": "number",
      "nb_fan": "number",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "next": "function",
  "total": "number",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Track by ISRC data structure 1`] = `
{
  "album": {
    "cover": "string",
    "cover_big": "string",
    "cover_medium": "string",
    "cover_small": "string",
    "cover_xl": "string",
    "id": "number",
    "link": "string",
    "md5_image": "string",
    "release_date": "string",
    "title": "string",
    "tracklist": "string",
    "type": "string",
  },
  "artist": {
    "id": "number",
    "link": "string",
    "name": "string",
    "picture": "string",
    "picture_big": "string",
    "picture_medium": "string",
    "picture_small": "string",
    "picture_xl": "string",
    "radio": "boolean",
    "share": "string",
    "tracklist": "string",
    "type": "string",
  },
  "available_countries": [
    "string",
  ],
  "bpm": "number",
  "contributors": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "role": "string",
      "share": "string",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "disk_number": "number",
  "duration": "number",
  "explicit_content_cover": "number",
  "explicit_content_lyrics": "number",
  "explicit_lyrics": "boolean",
  "gain": "number",
  "id": "number",
  "isrc": "string",
  "link": "string",
  "md5_image": "string",
  "preview": "string",
  "rank": "number",
  "readable": "boolean",
  "release_date": "string",
  "share": "string",
  "title": "string",
  "title_short": "string",
  "title_version": "string",
  "track_position": "number",
  "track_token": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates Track endpoint data structure 1`] = `
{
  "album": {
    "cover": "string",
    "cover_big": "string",
    "cover_medium": "string",
    "cover_small": "string",
    "cover_xl": "string",
    "id": "number",
    "link": "string",
    "md5_image": "string",
    "release_date": "string",
    "title": "string",
    "tracklist": "string",
    "type": "string",
  },
  "artist": {
    "id": "number",
    "link": "string",
    "name": "string",
    "picture": "string",
    "picture_big": "string",
    "picture_medium": "string",
    "picture_small": "string",
    "picture_xl": "string",
    "radio": "boolean",
    "share": "string",
    "tracklist": "string",
    "type": "string",
  },
  "available_countries": [
    "string",
  ],
  "bpm": "number",
  "contributors": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "role": "string",
      "share": "string",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "disk_number": "number",
  "duration": "number",
  "explicit_content_cover": "number",
  "explicit_content_lyrics": "number",
  "explicit_lyrics": "boolean",
  "gain": "number",
  "id": "number",
  "isrc": "string",
  "link": "string",
  "md5_image": "string",
  "preview": "string",
  "rank": "number",
  "readable": "boolean",
  "release_date": "string",
  "share": "string",
  "title": "string",
  "title_short": "string",
  "title_version": "string",
  "track_position": "number",
  "track_token": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates User endpoint data structure 1`] = `
{
  "country": "string",
  "id": "number",
  "link": "string",
  "name": "string",
  "picture": "string",
  "picture_big": "string",
  "picture_medium": "string",
  "picture_small": "string",
  "picture_xl": "string",
  "tracklist": "string",
  "type": "string",
}
`;

exports[`Live API Runtime Validation (Snapshots) > validates resolve method with track URL 1`] = `
{
  "album": {
    "cover": "string",
    "cover_big": "string",
    "cover_medium": "string",
    "cover_small": "string",
    "cover_xl": "string",
    "id": "number",
    "link": "string",
    "md5_image": "string",
    "release_date": "string",
    "title": "string",
    "tracklist": "string",
    "type": "string",
  },
  "artist": {
    "id": "number",
    "link": "string",
    "name": "string",
    "picture": "string",
    "picture_big": "string",
    "picture_medium": "string",
    "picture_small": "string",
    "picture_xl": "string",
    "radio": "boolean",
    "share": "string",
    "tracklist": "string",
    "type": "string",
  },
  "available_countries": [
    "string",
  ],
  "bpm": "number",
  "contributors": [
    {
      "id": "number",
      "link": "string",
      "name": "string",
      "picture": "string",
      "picture_big": "string",
      "picture_medium": "string",
      "picture_small": "string",
      "picture_xl": "string",
      "radio": "boolean",
      "role": "string",
      "share": "string",
      "tracklist": "string",
      "type": "string",
    },
  ],
  "disk_number": "number",
  "duration": "number",
  "explicit_content_cover": "number",
  "explicit_content_lyrics": "number",
  "explicit_lyrics": "boolean",
  "gain": "number",
  "id": "number",
  "isrc": "string",
  "link": "string",
  "md5_image": "string",
  "preview": "string",
  "rank": "number",
  "readable": "boolean",
  "release_date": "string",
  "share": "string",
  "title": "string",
  "title_short": "string",
  "title_version": "string",
  "track_position": "number",
  "track_token": "string",
  "type": "string",
}
`;
